--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       <input type="text" placeholder="Login"[(ngModel)]="newUser.email">
       <input type="password" placeholder="Senha"[(ngModel)]="newUser.password">
       <button class="btn btn-primary btn-block"(click)="loginUser()">Entrar</button>
-      <button class="btn btn-primary btn-block">=Cadastrar-se</button>
+      <button class="btn btn-primary btn-block"(click)="Cadastro()">Cadastrar-se</button>
     </div>
     <p>{{newUser.email}}</p>
     <p>{{newUser.password}}</p>
