--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -6,11 +6,9 @@
       <input type="text" placeholder="Nome"[(ngModel)]="newUser.nome">
       <input type="text" placeholder="Email"[(ngModel)]="newUser.email">
       <input type="password" placeholder="Senha"[(ngModel)]="newUser.password">
-      <button class="btn btn-primary btn-block"(click)="admin/php/cadastro.php">Cadastrar</button>
+      <button class="btn btn-primary btn-block"(click)="loginUser()">Cadastrar</button>
+      
     </div>
-    <p>{{newUser.email}}</p>
-    <p>{{newUser.password}}</p>
-    
     
   </div>
 </div>
