--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -6,7 +6,7 @@
       <input type="text" placeholder="Login"[(ngModel)]="newUser.email">
       <input type="password" placeholder="Senha"[(ngModel)]="newUser.password">
       <button class="btn btn-primary btn-block"(click)="loginUser()">Entrar</button>
-      <a href="src/app/cadastro/cadastro.component.html" target="window.src/app/cadastro/cadastro.component.css" class="link">Cadastre-se</a>
+      <a href="src/app/cadastro/cadastro.component.html" target="_blank" class="link">Cadastre-se</a>
     </div>
 
     
